tests/expression/tuple_fail_out_of_bounds.sy
start :: fn {
    a := (1, 2)
    a[2]
}
// error: $TupleIndexOutOfRange { .. }
